# ocamlipc

./: Makefile  README.md  _tags  cIpc.c  dune  ipc.ml  ipc.mli  ipc.mlpack  libcIpc.clib
